fixed createtrip input to a visible white text

--- a/src/css/createtrip.css
+++ b/src/css/createtrip.css
@@ -40,7 +40,13 @@ nav {
 margin-top: 4vh;
 }
 
+input {
+  color: white;
+}
 
+input:focus {
+  color: white;
+}
 
 #inner {
   width: 100%;
